Create Home page

--- a/index.html
+++ b/index.html
@@ -10,31 +10,90 @@
 <body>
     <div class="wrapper">
         <!---------------- HEADER ---------------->
+        <div class="head-one">
+            <nav>
+                <ul>
+                  <li><img src="./assets/img/" alt="facebook logo"></li>
+                  <li><img src="./assets/img/twitter.png" alt="twitter logo"></li>
+                  <li><a href="#">English</a></li>
+                  <li><a href="#">My Page</a></li>
+                  <li><a href="#">Logout</a></li>
+                </ul>
+              </nav>
+        </div>
         <div class="header" id="header">
             <header class="header-content">
-
+                <div class="hmb">
+                    <button class="hamburger-btn"></button>
+                </div>
             </header>
+        </div>
+        <div>
+            <a class="worldTour-logo" href="#"><img src=".assets/img/logo.png" alt="Group logo"></a>
+            <nav class="desktop-menu">
+                <ul class="nav-menu">
+                    <li class="nav-item"><a href="./about.html">About</a></li>
+                    <li class="nav-item"><a href="#Program">Program</a></li>
+                    <li class="nav-item"><a href="#">Join</a></li>
+                    <li class="nav-item"><a href="#">Sponsor</a></li>
+                    <li class="nav-item"><a href="#">News</a></li>
+                    <li><a class="concert" href="#"></a>Spring Day World Tour</li>
+                </ul>
+            </nav>
         </div>
         <!---------------- //HEADER ---------------->
 
         <!------------------ HOME ------------------>
-        <div class="home">
-            <section class="presentation">
+        <section class="home">
+            <div class="presentation">
+                <h1 class="world-tour">Hello! Armys</h1>
+                <h2>SPRING DAY WORLD TOUR</h2>
+                <p>Are you ready to get hyped up Armys ? After a two-year rest, BTS are finally back to the stage as a group. Spring Day 2025, the most awaited Wolrd Tour, is going to take them to 10 cities across Asia, Africa and Europe starting from July.</p>
+                <h3>2025.07.03 ~ 2025.08.02</h3>
+                <p>@SEOUL Olympic Stadium, TOKYO Dome and more ~ </p>
+            </div>
+        </section> 
 
-            </section>
+        <section class="schedule">
+            <h3>Main program</h3>
+            <span class="line-break"></span>
+            <div class="program-container">
+                <div class="program">
+                  <img src="./assets/images/program3.png" alt="">
+                  <h3>Press Conference</h3>
+                  <p>The members will answer on press questions and talk about their journey as solo artists before army enlistment</p>
+                </div>
+                <div class="program">
+                  <img src="./assets/images/program4.png" alt="">
+                  <h3>Concert Day 1</h3>
+                  <p>Voice check and Rehearsals start at 9 am. The offiline concert takes place from 7 to 10pm. Different songs from HYYH, Wings and Love Yourself Triogy alumbs will be performed</p>
+                </div>
+                <div class="program">
+                  <img src="./assets/images/program2.png" alt="">
+                  <h3>Concerts Day 2</h3>
+                  <p>Voice check and Rehearsals start at 9 am. The offiline concert takes place from 7 to 10pm. Different songs from Map of The Soul , Proof and Solo Albums will be performed</p>
+                </div>
+                <div class="program">
+                  <img src="./assets/images/program5.png" alt="">
+                  <h3>Fan Meeting</h3>
+                  <p>The members will join their fans in an exlusive meeting to sign albums and have fun together with Armys</p>
+                </div>
+                <div class="program">
+                  <img src="./assets/images/program1.png" alt="">
+                  <h3>Show Time</h3>
+                  <p>of BTS three documantaries Burn The Stage and Bring The Soul</p>
+                </div>
+              </div>
+              <a href="#">Get your tickets now on WEVERSE SHOP !</a>
+        </section>
 
-            <section class="schedule">
-
-            </section>
-
-            <section class="featured-group-members">
-                 <!--- Dynamically generated with javascript --->
-            </section>
-        </div>
+        <section class="featured-group-members">
+             <!--- Dynamically generated with javascript --->
+        </section>  
          <!---------------- //HOME ---------------->
          
-         <!-------------- ABOUT PAGE -------------->
-        <div class="about-page">
+         <!-------------- MAIN PROGRAM PAGE -------------->
+        <div class="main-program-page">
             <section class="about-group">
 
             </section>
