Fixing home page styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header-desktop1">
                 <nav>
                     <ul>
-                        <li><img src="./assets/img/" alt="facebook logo"></li>
+                        <li><img src="./assets/img/facebook.png" alt="facebook logo"></li>
                         <li><img src="./assets/img/twitter.png" alt="twitter logo"></li>
                         <li><a href="#">English</a></li>
                         <li><a href="#">My Page</a></li>
@@ -24,7 +24,7 @@
             </div>
             <button class="hamburger-btn"></button>  
             <div class="header-desktop2">
-                <a class="worldTour-logo" href="#"><img src=".assets/img/logo.png" alt="Group logo"></a>
+                <a class="worldTour-logo" href="#"><img src="./assets/img/logo.png" alt="Group logo"></a>
                 <nav class="desktop-menu">
                     <ul class="nav-menu">
                         <li class="nav-item"><a href="./about.html">About</a></li>
@@ -42,9 +42,9 @@
             <div class="presentation">
                 <h1>"Hello! Armys"</h1>
                 <h2>봄날 WORLD TOUR 2025</h2>
-                <p class="text">Armys, are you ready to get hyped up ? BTS are finally back to the stage to perform as a group, after a two-year hiatus. Spring Day 2025, the most awaited Wolrd Tour, is going to take them to 15 cities across Asia, Africa and Europe starting from 1st July.</p>
-                <h3>2025년07월03일 ~ 2025년08월02일</h3>
-                <p class="venue">@SEOUL Olympic Stadium, TOKYO Dome and more ~ </p>
+                <p class="text">Armys, are you ready to get hyped up ? </br>BTS are finally back to the stage to perform as a group, after a two-year hiatus. Spring Day 2025, the most awaited Wolrd Tour, is going to take them to 15 cities across Asia, Africa and Europe starting from 1st July. </br>Get your army bombs ready, many surprises are waiting for you at concert venues</p>
+                <h3>2025년7월3일 ~ 8월2일</h3>
+                <p class="venue">@SEOUL Olympic Stadium, TOKYO Dome, Mohamed V Stadium and more ~ </p>
             </div>
         </section> 
 
@@ -101,7 +101,7 @@
         </section>
          <!-------------- FOOTER -------------->
         <footer>
-            <img src="./assets/img/game.jpg" alt="">
+            <img src="./assets/img/BTS-Logo.png" alt="">
             <p>©2025 BTS Wolrd Tour Series<br>All Rights Reserved.</p>
         </footer>
     </div>
