--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <!---------------- HEADER ---------------->
         <header class="header-content">
             <div class="header-desktop1">
+                <a class="worldTour-logo" href="#"><img src="./assets/img/logo.png" alt="Group logo"></a>
                 <nav>
                     <ul>
                         <li><img src="./assets/img/facebook.png" alt="facebook logo"></li>
@@ -23,16 +24,16 @@
                 </nav>
             </div>
             <button class="hamburger-btn"></button>  
-            <div class="header-desktop2">
-                <a class="worldTour-logo" href="#"><img src="./assets/img/logo.png" alt="Group logo"></a>
+            <div class="header-two">
+                <img class="close-btn" src="assets/img/close-icon.png" alt="">
                 <nav class="desktop-menu">
-                    <ul class="nav-menu">
-                        <li class="nav-item"><a href="./about.html">About</a></li>
-                        <li class="nav-item"><a href="#Program">Program</a></li>
-                        <li class="nav-item"><a href="#">Join</a></li>
-                        <li class="nav-item"><a href="#">Sponsor</a></li>
-                        <li class="nav-item"><a href="#">News</a></li>
-                        <li><a class="concert" href="#"></a>Spring Day World Tour</li>
+                    <ul>
+                        <li class="nav-item"><a class="menu-item" href="./about.html">About</a></li>
+                        <li class="nav-item"><a class="menu-item" href="#Program">Program</a></li>
+                        <li class="nav-item"><a class="menu-item" href="#">Join</a></li>
+                        <li class="nav-item"><a class="menu-item" href="#">Sponsor</a></li>
+                        <li class="nav-item"><a class="menu-item" href="#">News</a></li>
+                        <li class="nav-item1"><a class="concert" href="#"></a>Spring Day World Tour</li>
                     </ul>
                 </nav>
             </div>
