Adjusting group members and partners sections styling

--- a/index.html
+++ b/index.html
@@ -81,29 +81,28 @@
               </div>
               <a href="#">Get your tickets now on Weverse Shop</a>
         </section>
-
-        <section class="featured-group-members">
+        <!------------------ GROUP MEMEBERS SECTION ------------------>
+        <section class="gm-section">
             <h3>Group Members</h3>
             <hr>
-            <div class="featured-speakers"></div>
-             <!--- Dynamically generated with javascript --->
+            <!--- Dynamically generated with javascript --->
         </section>  
-
+        <!------------------ PARTNERS SECTION ------------------>
         <section class="partners">
-            <h3>Partners</h3>
+            <h3 class="partners-title">Partners</h3>
             <hr>
             <ul>
-              <li><img src="./assets/img/Partner1.png" alt=""></li>
+              <li><img src="./assets/img/hybe.png" alt=""></li>
               <li><img src="./assets/img/Partner2.png" alt=""></li>
               <li><img src="./assets/img/Partner3.png" alt=""></li>
               <li><img src="./assets/img/Partner4.png" alt=""></li>
-              <li><img src="./assets/img/Partner5.png" alt=""></li>
+              <li><img src="./assets/img/hyundai.png" alt=""></li>
             </ul>
         </section>
          <!-------------- FOOTER -------------->
         <footer>
-            <img src="./assets/img/BTS-Logo.png" alt="">
-            <p>©2025 BTS Wolrd Tour Series<br>All Rights Reserved.</p>
+            <img src="./assets/img/logo.png" alt="">
+            <p>Copyright © 2025 Big Hit Music / HYBE.<br>All Rights Reserved.</p>
         </footer>
     </div>
     <script src="main.js"></script>
