Adjusting group members and partners sections styling

--- a/about.html
+++ b/about.html
@@ -46,11 +46,11 @@
             </div>
         </section>
         <section class="about-concerts">
-            <h2>방탄소년단</br>BTS Logo</h2>
+            <h2>봄날 월드 투어 로고</br>SPRING DAY World Tour Logo</h2>
             <hr>
-            <p class="mobile">This of Logo is the second version that was made back in 2017. The reason this form was chosen is that it fits the logo used by the fanbase "Army". Joining the two logos forms a tall medieval shield.</p>
+            <p class="mobile">The Logo of BTS Spring Day Wolrd Tour 2025 was decided through an international competion from 8.February to 7.March</p>
             <p class="desktop">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum quod dignissimos eligendi quas eos aut ipsam odit, hic qui a laborum veritatis aperiam necessitatibus quisquam iure debitis ullam. Qui, sed amet totam voluptate, possimus obcaecati aperiam eligendi explicabo aliquam quisquam quibusdam similique distinctio, animi itaque fugit? Consequatur vel placeat tempora fugit!</p>
-            <img class="logo-img" src="./assets/img/logo.png" alt="">
+            <img class="logo-img" src="./assets/img/spring-day.png" alt="">
             <div class="hr-normal"></div>
             <h2>See the past Wolrd Tours</h2>
             <hr>
