Adjusting desktop version styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <!---------------- HEADER ---------------->
         <header class="header-content">
             <div class="header-desktop1">
-                <a class="worldTour-logo" href="#"><img src="./assets/img/logo.png" alt="Group logo"></a>
                 <nav>
                     <ul>
                         <li><img src="./assets/img/facebook.png" alt="facebook logo"></li>
@@ -25,6 +24,7 @@
             </div>
             <button class="hamburger-btn"></button>  
             <div class="header-two">
+                <img class="logo" src="./assets/img/logo.png" alt="Group logo">
                 <img class="close-btn" src="assets/img/close-icon.png" alt="">
                 <nav class="desktop-menu">
                     <ul>
@@ -45,7 +45,7 @@
                 <h2>봄날 WORLD TOUR 2025</h2>
                 <p class="text">Armys, are you ready to get hyped up ? </br>BTS are finally back to the stage to perform as a group, after a two-year hiatus. Spring Day 2025, the most awaited Wolrd Tour, is going to take them to 15 cities across Asia, Africa and Europe starting from 1st July. </br>Get your army bombs ready, many surprises are waiting for you at concert venues</p>
                 <h3>2025년7월3일 ~ 8월2일</h3>
-                <p class="venue">@SEOUL Olympic Stadium, TOKYO Dome, Mohamed V Stadium and more ~ </p>
+                <p class="venue">@SEOUL Olympic Stadium, TOKYO Dome, Prince Moulay Abdellah Stadium and more ~ </p>
             </div>
         </section> 
 
@@ -82,10 +82,12 @@
               <a href="#">Get your tickets now on Weverse Shop</a>
         </section>
         <!------------------ GROUP MEMEBERS SECTION ------------------>
-        <section class="gm-section">
+        <section class="global-section">
             <h3>Group Members</h3>
             <hr>
-            <!--- Dynamically generated with javascript --->
+            <section class="gm-section">
+                <!--- Dynamically generated with javascript --->
+            </section>
         </section>  
         <!------------------ PARTNERS SECTION ------------------>
         <section class="partners">
