--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 <body>
     <div class="wrapper">
         <header class="header-content">
-            <div class="head-one">
-               <nav>
+            <div class="header-desktop1">
+                <nav>
                     <ul>
-                        <li><img src="./assets/img/" alt="facebook logo"></li>
+                        <li><img src="./assets/img/facebook.png" alt="facebook logo"></li>
                         <li><img src="./assets/img/twitter.png" alt="twitter logo"></li>
                         <li><a href="#">English</a></li>
                         <li><a href="#">My Page</a></li>
@@ -21,8 +21,9 @@
                     </ul>
                 </nav>
             </div>
-            <button class="hamburger-btn"></button>
+            <button class="hamburger-btn"></button>  
             <div class="header-two">
+                <img class="logo" src="./assets/img/logo.png" alt="Group logo">
                 <img class="close-btn" src="assets/img/close-icon.png" alt="">
                 <nav class="desktop-menu">
                     <ul>
@@ -40,7 +41,7 @@
         <section class="about-section">
             <div class="about-section-content">
                 <h1>"Hello! Armys"</h1>
-                <h2>SPRING DAY WORLD TOUR</h2>
+                <h2>SPRING DAY WORLD TOUR 2025</h2>
                 <p class="p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque eius rerum velit eaque, ex, optio alias dolor necessitatibus, repellendus distinctio vero dignissimos temporibus incidunt. Aut temporibus maxime perspiciatis nulla ex ut vitae labore fugiat fuga. Modi, recusandae.</p>
                 <p>For more informations about The World Tour<br>Please contact us via email<br><a href="">support@weverse.io</a></p>
             </div>
