Modify index.html file

--- a/index.html
+++ b/index.html
@@ -54,27 +54,27 @@
             <span class="line-break"></span>
             <div class="program-container">
                 <div class="program">
-                  <img class="img1" src="./assets/img/program3.png" alt="">
+                  <img class="img1" src="./assets/img/Program3.png" alt="">
                   <h3>Press Conference</h3>
                   <p>The members will answer on press questions and talk about their journey as solo artists before army enlistment</p>
                 </div>
                 <div class="program">
-                  <img class="img2" src="./assets/img/program2.png" alt="">
+                  <img class="img2" src="./assets/img/Program2.png" alt="">
                   <h3>Concert Day 1</h3>
                   <p>Voice check starts at 9 am. The concert takes place from 7 to 10pm. Songs from HYYH, Wings and Love Yourself alumbs will be performed</p>
                 </div>
                 <div class="program">
-                  <img class="img2" src="./assets/img/program2.png" alt="">
+                  <img class="img2" src="./assets/img/Program2.png" alt="">
                   <h3>Concerts Day 2</h3>
                   <p>Voice check starts at 9 am. The concert takes place from 7 to 10pm. Songs from Map of The Soul, Proof and solo albums will be performed</p>
                 </div>
                 <div class="program">
-                  <img class="img2" src="./assets/img/program5.png" alt="">
+                  <img class="img2" src="./assets/img/Program5.png" alt="">
                   <h3>Fan Meeting</h3>
                   <p>The members will join their fans in an exlusive meeting to sign albums and have fun together with Armys</p>
                 </div>
                 <div class="program">
-                  <img class="img1" src="./assets/img/program1.png" alt="">
+                  <img class="img1" src="./assets/img/Program1.png" alt="">
                   <h3>Show Time</h3>
                   <p>Show of BTS three movies: Burn The Stage, Bring The Soul and Break The Silence</p>
                 </div>
