Modify index.html file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <span class="line-break"></span>
             <div class="program-container">
                 <div class="program">
-                  <img class="img1" src="./assets/img/Program3.png" alt="">
+                  <img class="img1" src="./assets/img/program3.png" alt="">
                   <h3>Press Conference</h3>
                   <p>The members will answer on press questions and talk about their journey as solo artists before army enlistment</p>
                 </div>
