Implementing requested changes

--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
             </div>
             <button class="hamburger-btn"></button>  
             <div class="header-two">
-                <img class="logo" src="./assets/img/logo.png" alt="Group logo">
-                <img class="close-btn" src="assets/img/close-icon.png" alt="">
+                <a href="index.html"><img class="logo" src="./assets/img/BTS-Logo.png" alt="Group logo"></a>
+                <img class="close-btn" src="assets/img/closeIcon.png" alt="Close button">
                 <nav class="desktop-menu">
                     <ul>
                         <li class="nav-item"><a class="menu-item" href="./index.html">Home</a></li>
@@ -51,7 +51,7 @@
             <hr>
             <p class="mobile">The Logo of BTS Spring Day Wolrd Tour 2025 was decided through an international competion from 8.February to 7.March</p>
             <p class="desktop">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum quod dignissimos eligendi quas eos aut ipsam odit, hic qui a laborum veritatis aperiam necessitatibus quisquam iure debitis ullam. Qui, sed amet totam voluptate, possimus obcaecati aperiam eligendi explicabo aliquam quisquam quibusdam similique distinctio, animi itaque fugit? Consequatur vel placeat tempora fugit!</p>
-            <img class="logo-img" src="./assets/img/spring-day.png" alt="">
+            <img class="logo-img" src="./assets/img/spring-day.png" alt="Tour logo">
             <div class="hr-normal"></div>
             <h2>See the past Wolrd Tours</h2>
             <hr>
@@ -59,11 +59,11 @@
 
             <div class="past-events">
                 <div class="past-event">
-                    <img src="./assets/img/Wings-Tour.png" alt="">
+                    <img class="img1" src="./assets/img/Wings-Tour.png" alt="Past tour logo 1">
                 </div>
 
                 <div class="past-event">
-                    <img src="./assets/img/LY-Tour.png" alt="">
+                    <img class="img2" src="./assets/img/LY-Tour.png" alt="Past tour logo 2">
                 </div>
             </div>
         </section>
@@ -72,16 +72,16 @@
             <h3>Partners</h3>
             <hr>
             <ul>
-                <li><img src="./assets/img/hybe.png" alt=""></li>
-                <li><img src="./assets/img/Partner2.png" alt=""></li>
-                <li><img src="./assets/img/Partner3.png" alt=""></li>
-                <li><img src="./assets/img/Partner4.png" alt=""></li>
-                <li><img src="./assets/img/hyundai.png" alt=""></li>
-            </ul>
+                <li><img src="./assets/img/hybe.png" alt="partner 1"></li>
+                <li><img src="./assets/img/Partner2.png" alt="partner 2"></li>
+                <li><img src="./assets/img/Partner3.png" alt="partner 3"></li>
+                <li><img src="./assets/img/Partner4.png" alt="partner 4"></li>
+                <li><img src="./assets/img/hyundai.png" alt="partner 5"></li>
+              </ul>
         </section>
         <!-------------- FOOTER -------------->
         <footer>
-            <img src="./assets/img/logo.png" alt="">
+            <img src="./assets/img/BTS-Logo.png" alt="Group logo">
             <p>Copyright © 2025 Big Hit Music / HYBE.<br>All Rights Reserved.</p>
         </footer>
     </div>
