--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <button class="hamburger-btn"></button>  
             <div class="header-two">
-                <img class="logo" src="./assets/img/logo.png" alt="Group logo">
-                <img class="close-btn" src="assets/img/close-icon.png" alt="">
+                <a href="index.html"><img class="logo" src="./assets/img/BTS-Logo.png" alt="Group logo"></a>
+                <img class="close-btn" src="assets/img/closeIcon.png" alt="Close button">
                 <nav class="desktop-menu">
                     <ul>
                         <li class="nav-item"><a class="menu-item" href="./about.html">About</a></li>
@@ -54,27 +54,27 @@
             <span class="line-break"></span>
             <div class="program-container">
                 <div class="program">
-                  <img class="img1" src="./assets/img/program3.png" alt="">
+                  <img class="img1" src="./assets/img/program3.png" alt="program 1">
                   <h3>Press Conference</h3>
                   <p>The members will answer on press questions and talk about their journey as solo artists before army enlistment</p>
                 </div>
                 <div class="program">
-                  <img class="img2" src="./assets/img/Program2.png" alt="">
+                  <img class="img2" src="./assets/img/Program2.png" alt="program 2">
                   <h3>Concert Day 1</h3>
                   <p>Voice check starts at 9 am. The concert takes place from 7 to 10pm. Songs from HYYH, Wings and Love Yourself alumbs will be performed</p>
                 </div>
                 <div class="program">
-                  <img class="img2" src="./assets/img/Program2.png" alt="">
+                  <img class="img2" src="./assets/img/Program2.png" alt="program 3">
                   <h3>Concerts Day 2</h3>
                   <p>Voice check starts at 9 am. The concert takes place from 7 to 10pm. Songs from Map of The Soul, Proof and solo albums will be performed</p>
                 </div>
                 <div class="program">
-                  <img class="img2" src="./assets/img/Program5.png" alt="">
+                  <img class="img2" src="./assets/img/Program5.png" alt="program 4">
                   <h3>Fan Meeting</h3>
                   <p>The members will join their fans in an exlusive meeting to sign albums and have fun together with Armys</p>
                 </div>
                 <div class="program">
-                  <img class="img1" src="./assets/img/Program1.png" alt="">
+                  <img class="img1" src="./assets/img/Program1.png" alt="program 5">
                   <h3>Show Time</h3>
                   <p>Show of BTS three movies: Burn The Stage, Bring The Soul and Break The Silence</p>
                 </div>
@@ -94,16 +94,16 @@
             <h3 class="partners-title">Partners</h3>
             <hr>
             <ul>
-              <li><img src="./assets/img/hybe.png" alt=""></li>
-              <li><img src="./assets/img/Partner2.png" alt=""></li>
-              <li><img src="./assets/img/Partner3.png" alt=""></li>
-              <li><img src="./assets/img/Partner4.png" alt=""></li>
-              <li><img src="./assets/img/hyundai.png" alt=""></li>
+              <li><img src="./assets/img/hybe.png" alt="partner 1"></li>
+              <li><img src="./assets/img/Partner2.png" alt="partner 2"></li>
+              <li><img src="./assets/img/Partner3.png" alt="partner 3"></li>
+              <li><img src="./assets/img/Partner4.png" alt="partner 4"></li>
+              <li><img src="./assets/img/hyundai.png" alt="partner 5"></li>
             </ul>
         </section>
          <!-------------- FOOTER -------------->
         <footer>
-            <img src="./assets/img/logo.png" alt="">
+            <img src="./assets/img/BTS-Logo.png" alt="">
             <p>Copyright © 2025 Big Hit Music / HYBE.<br>All Rights Reserved.</p>
         </footer>
     </div>
